--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,11 @@
-<!DOCTYPE html><html><head><title>空腹スコア</title></head><body><div id='root'></div></body></html>
+<!DOCTYPE html>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>空腹スコア・アプリ</title>
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
+</html>
