--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>空腹スコア・アプリ</title>
+    <title>空腹スコア</title>
   </head>
   <body>
     <div id="root"></div>
